// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ll add error recovery works 2`] = `
"{
  'start': 0,
  'end': 2,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 3,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 6,
      'id': 2,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 3,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 3,
          'token': 'NUMBER',
          'type': 'token',
          'text': '0',
          'recovery': 'add'
        }
      ],
      'ruleIndex': 7,
      'internalRuleIndex': 10,
      'id': 13,
      'isWrap': true
    }
  ],
  'ruleIndex': 4,
  'internalRuleIndex': 6,
  'id': 14,
  'isWrap': true
}"
`;

exports[`ll ast works 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 4,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 1,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 2,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 6,
          'id': 2,
          'isWrap': true
        },
        {
          'start': 1,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 3,
          'token': '+',
          'type': 'token',
          'text': '+'
        },
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 10,
          'id': 13,
          'isWrap': true
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 6,
      'id': 8,
      'isWrap': true
    },
    {
      'start': 3,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 4,
      'lastColumn': 5,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': 'NUMBER',
          'type': 'token',
          'text': '3'
        }
      ],
      'ruleIndex': 7,
      'internalRuleIndex': 10,
      'id': 19,
      'isWrap': true
    }
  ],
  'ruleIndex': 4,
  'internalRuleIndex': 6,
  'id': 20,
  'isWrap': true
}"
`;

exports[`ll ast works 2`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 6,
      'id': 2,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 10,
          'id': 9,
          'isWrap': true
        },
        {
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5,
          'token': '*',
          'type': 'token',
          'text': '*'
        },
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'token': 'NUMBER',
              'type': 'token',
              'text': '3'
            }
          ],
          'internalRuleIndex': 13,
          'id': 14
        }
      ],
      'ruleIndex': 7,
      'internalRuleIndex': 10,
      'id': 17,
      'isWrap': true
    }
  ],
  'ruleIndex': 4,
  'internalRuleIndex': 6,
  'id': 18,
  'isWrap': true
}"
`;

exports[`ll ast works 3`] = `
"{
  'start': 0,
  'end': 11,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 12,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 6,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 1,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 2,
              'token': 'NUMBER',
              'type': 'token',
              'text': '1'
            }
          ],
          'ruleIndex': 4,
          'internalRuleIndex': 6,
          'id': 2,
          'isWrap': true
        },
        {
          'start': 1,
          'end': 2,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 3,
          'token': '+',
          'type': 'token',
          'text': '+'
        },
        {
          'start': 2,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 6,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 2,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 3,
                  'lastColumn': 4,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '2'
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 10,
              'id': 9,
              'isWrap': true
            },
            {
              'start': 3,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 5,
              'token': '*',
              'type': 'token',
              'text': '*'
            },
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '4'
                }
              ],
              'internalRuleIndex': 13,
              'id': 14
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 10,
          'id': 17,
          'isWrap': true
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 6,
      'id': 8,
      'isWrap': true
    },
    {
      'start': 5,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 6,
      'lastColumn': 7,
      'token': '-',
      'type': 'token',
      'text': '-'
    },
    {
      'start': 6,
      'end': 11,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 12,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 6,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 7,
              'lastColumn': 8,
              'token': 'NUMBER',
              'type': 'token',
              'text': '5'
            }
          ],
          'internalRuleIndex': 14,
          'id': 21,
          'isWrap': true
        },
        {
          'start': 7,
          'end': 8,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 8,
          'lastColumn': 9,
          'token': '^',
          'type': 'token',
          'text': '^'
        },
        {
          'start': 8,
          'end': 11,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 9,
          'lastColumn': 12,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 8,
              'end': 9,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 9,
              'lastColumn': 10,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 8,
                  'end': 9,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 9,
                  'lastColumn': 10,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '2'
                }
              ],
              'internalRuleIndex': 14,
              'id': 24,
              'isWrap': true
            },
            {
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11,
              'token': '^',
              'type': 'token',
              'text': '^'
            },
            {
              'start': 10,
              'end': 11,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 12,
              'symbol': 'exp',
              'type': 'symbol',
              'children': [
                {
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12,
                  'token': 'NUMBER',
                  'type': 'token',
                  'text': '3'
                }
              ],
              'internalRuleIndex': 13,
              'id': 26
            }
          ],
          'internalRuleIndex': 13,
          'id': 23
        }
      ],
      'ruleIndex': 7,
      'internalRuleIndex': 10,
      'id': 29,
      'isWrap': true
    }
  ],
  'ruleIndex': 4,
  'internalRuleIndex': 6,
  'id': 30,
  'isWrap': true
}"
`;

exports[`ll error detection works 1`] = `
"{
  'start': 0,
  'end': 3,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 4,
  'symbol': 'exp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': 'NUMBER',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 4,
      'internalRuleIndex': 6,
      'id': 2,
      'isWrap': true
    },
    {
      'start': 1,
      'end': 2,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 3,
      'token': '+',
      'type': 'token',
      'text': '+'
    },
    {
      'start': 2,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 5,
      'symbol': 'exp',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'symbol': 'exp',
          'type': 'symbol',
          'children': [
            {
              'start': 2,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 4,
              'token': 'NUMBER',
              'type': 'token',
              'text': '2'
            }
          ],
          'ruleIndex': 7,
          'internalRuleIndex': 10,
          'id': 9,
          'isWrap': true
        },
        {
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5,
          'token': '*',
          'type': 'token',
          'text': '*'
        },
        {
          'start': 4,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 5,
          'token': '$EOF',
          'type': 'token',
          'text': '',
          'error': {
            'recovery': false,
            'errorMessage': 'syntax error at line 1:\\\\n1+2*\\\\n----^\\\\n'(', 'NUMBER', '-' expected.\\\\ncurrent token: '$EOF'.',
            'tip': ''(', 'NUMBER', '-' expected.\\\\ncurrent token: '$EOF'.',
            'expected': [
              '(',
              'NUMBER',
              '-'
            ],
            'symbol': 'exp',
            'token': {
              'text': '',
              't': '$EOF',
              'token': '$EOF',
              'start': 4,
              'end': 4,
              'firstLine': 1,
              'firstColumn': 5,
              'lastLine': 1,
              'lastColumn': 5
            }
          }
        }
      ],
      'ruleIndex': 7,
      'internalRuleIndex': 10,
      'id': 13,
      'isWrap': true
    }
  ],
  'ruleIndex': 4,
  'internalRuleIndex': 6,
  'id': 8,
  'isWrap': true
}"
`;

exports[`ll support parse from startSymbol 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 's2',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 5,
      'internalRuleIndex': 7,
      'id': 2
    },
    {
      'start': 2,
      'end': 3,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 3,
      'lastColumn': 4,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 2,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 3,
          'lastColumn': 4,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 5,
      'internalRuleIndex': 7,
      'id': 3
    },
    {
      'start': 4,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 5,
      'lastColumn': 6,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 4,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 6,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 5,
      'internalRuleIndex': 7,
      'id': 4
    },
    {
      'start': 6,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 7,
      'lastColumn': 8,
      'symbol': 'exp2',
      'type': 'symbol',
      'children': [
        {
          'start': 6,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 7,
          'lastColumn': 8,
          'token': '1',
          'type': 'token',
          'text': '1'
        }
      ],
      'ruleIndex': 5,
      'internalRuleIndex': 7,
      'id': 5
    }
  ],
  'ruleIndex': 3,
  'internalRuleIndex': 5,
  'id': 1
}"
`;
